edited calendar routes + added swagger api documentation
